--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "@types/styled-components": "^5.1.34",
+    "craco-alias": "^3.0.1",
     "zustand": "^4.5.2"
   }
 }
