--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "sanitize.css": "^13.0.0",
     "save-dev": "^0.0.1-security",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -55,6 +57,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "@types/react-slick": "^0.23.13",
     "@types/styled-components": "^5.1.34",
     "craco-alias": "^3.0.1",
     "zustand": "^4.5.2"
